--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#068FFF</color>
+    <color name="blueThin">#B3068FFF</color>
     <color name="blueLight">#A8D8FF</color>
     <color name="midnightBlue">#5E48E8</color>
     <color name="grey">#ADADAD</color>
+    <color name="red">#F83838</color>
 </resources>
