--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,7 +99,7 @@
                         android:focusable="true"
                         android:minHeight="44dp"
                         android:textAlignment="textStart"
-                        android:elevation="@dimen/_10sdp"
+                        android:elevation="@dimen/_5sdp"
                         app:queryBackground="@android:color/transparent"
                         app:queryHint="Mau cari apa..."
                         app:searchIcon="@drawable/ic_search" />
@@ -125,7 +125,7 @@
                 android:id="@+id/rv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:orientation="horizontal"
                 tools:listitem="@layout/category_item"
@@ -152,7 +152,7 @@
                 android:id="@+id/rv_menu_recommendation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:orientation="horizontal"
                 tools:listitem="@layout/list_item_product"
@@ -166,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginStart="@dimen/_16sdp"
-                android:text="@string/recommendation"
+                android:text="@string/popular"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
                 android:textSize="@dimen/_14sdp"
@@ -175,10 +175,10 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:id="@+id/tv_nearest_menus"
+                android:id="@+id/rv_popular_menus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:orientation="horizontal"
                 tools:listitem="@layout/list_item_product"
