--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:paddingBottom="@dimen/_16sdp"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,7 +27,7 @@
                 android:layout_height="0dp"
                 android:background="@color/blue"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent=".25"
+                app:layout_constraintHeight_percent=".20"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
             </View>
@@ -38,7 +40,7 @@
                 android:fontFamily="@font/poppins"
                 android:textSize="@dimen/_20ssp"
                 android:textStyle="bold"
-                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -47,7 +49,7 @@
                 android:id="@+id/profileSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_80sdp"
+                android:layout_marginTop="@dimen/_60sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/section_top">
@@ -108,7 +110,7 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/btnLanguage"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="55dp"
                     android:layout_marginBottom="16dp"
                     android:clickable="true"
                     android:focusable="true"
@@ -140,7 +142,7 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/btnChangePassword"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="55dp"
                     android:layout_marginBottom="16dp"
                     android:clickable="true"
                     app:cardCornerRadius="10dp">
@@ -171,7 +173,7 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/btnNotification"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="55dp"
                     android:layout_marginBottom="16dp"
                     android:clickable="true"
                     app:cardCornerRadius="10dp">
@@ -202,7 +204,7 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/btnHelp"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="55dp"
                     android:layout_marginBottom="16dp"
                     android:clickable="true"
                     app:cardCornerRadius="10dp">
@@ -234,21 +236,19 @@
                     style="@style/Widget.MaterialComponents.Button.Icon"
                     android:id="@+id/btn_logout"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_44sdp"
+                    android:layout_height="@dimen/_40sdp"
                     android:text="Logout"
                     app:icon="@drawable/ic_logout"
                     app:iconTintMode="multiply"
                     app:iconGravity="end"
-                    android:fontFamily="@font/roboto"
-                    android:textStyle="bold"
+                    android:textAllCaps="false"
+                    android:fontFamily="@font/poppins"
                     android:textColor="@color/white"
                     android:backgroundTint="@color/red"
                     app:layout_constraintBottom_toTopOf="@id/linear_info_register"
                     android:layout_marginHorizontal="@dimen/_36sdp"
-                    android:layout_marginTop="@dimen/_16sdp"
-                    android:layout_marginBottom="@dimen/_16sdp"/>
-
-
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginBottom="@dimen/_36sdp"/>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
