--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -152,7 +152,7 @@
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/blue"
             android:fontFamily="@font/roboto"
-            android:text="@string/register"
+            android:text="@string/register_now"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textAllCaps="false"
@@ -225,8 +225,8 @@
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginTop="8dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/btn_register_google"
-            tools:layout_editor_absoluteX="21dp">
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/btn_register_google">
 
             <TextView
                 android:id="@+id/tv_info"
