--- a/app/src/main/res/layout/items_product.xml
+++ b/app/src/main/res/layout/items_product.xml
@@ -2,27 +2,19 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="4dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="@dimen/_16sdp"
+    card_view:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:paddingEnd="@dimen/_16sdp">
 
         <ImageView
-<<<<<<< HEAD
-            android:id="@+id/img_item_photo"
-=======
-            android:id="@+id/iv_product"
->>>>>>> origin/master
+            android:id="@+id/iv_menu"
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_100sdp"
             android:scaleType="fitXY"
@@ -38,128 +30,60 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-<<<<<<< HEAD
-            android:layout_toEndOf="@id/img_item_photo"
-            android:textSize="14sp"
+            android:layout_toEndOf="@id/iv_menu"
+            android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
-            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
-            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
-=======
-            android:layout_toEndOf="@id/iv_product"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            card_view:layout_constraintStart_toEndOf="@+id/iv_product"
-            card_view:layout_constraintTop_toTopOf="@+id/iv_product"
->>>>>>> origin/master
+            card_view:layout_constraintStart_toEndOf="@+id/iv_menu"
+            card_view:layout_constraintTop_toTopOf="@+id/iv_menu"
             tools:text="product_name" />
 
         <TextView
-            android:id="@+id/tv_harga"
-            android:layout_width="0dp"
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="5"
-            android:textSize="12sp"
-<<<<<<< HEAD
-            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
-=======
-            card_view:layout_constraintBottom_toBottomOf="@+id/iv_product"
->>>>>>> origin/master
-            card_view:layout_constraintEnd_toEndOf="@+id/tv_name_product"
-            card_view:layout_constraintHorizontal_bias="0.0"
+            android:maxLines="1"
+            android:textSize="@dimen/_12ssp"
+            android:layout_marginTop="@dimen/_8sdp"
             card_view:layout_constraintStart_toStartOf="@+id/tv_name_product"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_name_product"
-            card_view:layout_constraintVertical_bias="0.159"
-            tools:text="Rp 2000" />
+            tools:text="Rp 200.000" />
 
-        <ImageButton
-            android:id="@+id/btn_favorite"
-            android:contentDescription="@string/btn_favorite"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:background="#00FFFFFF"
-            android:src="@drawable/ic_favorite"
-<<<<<<< HEAD
-            card_view:layout_constraintStart_toStartOf="@+id/img_item_photo"
-            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo" />
-=======
-            card_view:layout_constraintStart_toStartOf="@+id/iv_product"
-            card_view:layout_constraintTop_toTopOf="@+id/iv_product" />
->>>>>>> origin/master
-
-        <ImageButton
-            android:id="@+id/btn_location"
-            android:contentDescription="@string/button_location"
-            android:layout_width="80dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="@color/blue"
-            android:src="@drawable/ic_location"
-            card_view:layout_constraintStart_toStartOf="@+id/tv_harga"
-            card_view:layout_constraintTop_toBottomOf="@+id/tv_harga" />
-
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/tv_name_product"
-            card_view:layout_constraintTop_toTopOf="parent">
+            app:cardBackgroundColor="#BFFFFFFF"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            app:cardCornerRadius="5dp">
 
-
-            <ImageView
-                android:id="@+id/ic_ratting"
-                android:layout_width="@dimen/_24sdp"
-                android:layout_height="@dimen/_24sdp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_ulasan"
-<<<<<<< HEAD
-              />
-=======
-                />
->>>>>>> origin/master
-
-            <TextView
-                android:id="@+id/tv_ratting"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="14sp"
-                tools:text="4.2" />
+                android:background="@color/blueThin"
+                android:orientation="horizontal"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="4dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_star_yellow" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_gravity="center_vertical"
+                    android:text="4.5"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
 
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-
-        <TextView
-            android:id="@+id/tv_jarak"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/btn_location"
-            tools:text="100 meter" />
-
-        <TextView
-            android:id="@+id/tv_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textSize="12sp"
-            card_view:layout_constraintEnd_toEndOf="@+id/btn_location"
-            card_view:layout_constraintStart_toStartOf="@+id/btn_location"
-            card_view:layout_constraintTop_toBottomOf="@+id/btn_location"
-            tools:text="Sukamaju" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
