--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="blue">#068FFF</color>
     <color name="blueThin">#B3068FFF</color>
     <color name="blueLight">#A8D8FF</color>
+    <color name="green">#5BB85F</color>
     <color name="midnightBlue">#5E48E8</color>
     <color name="grey">#ADADAD</color>
     <color name="red">#F83838</color>
+    <color name="bg_placeholder">#dddddd</color>
 </resources>
