--- a/app/src/main/res/layout/items_menu_search.xml
+++ b/app/src/main/res/layout/items_menu_search.xml
@@ -85,6 +85,31 @@
 
         </androidx.cardview.widget.CardView>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16sdp"
+            card_view:layout_constraintTop_toBottomOf="@id/tv_price"
+            card_view:layout_constraintStart_toStartOf="@id/tv_price"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_food_bank" />
+            <TextView
+                android:id="@+id/seller_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_gravity="center_vertical"
+                android:text=""
+                android:maxLines="2"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/_10ssp" />
+        </LinearLayout>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
